# ideal-word-representations

./: .gitignore  00 timit preprocess.ipynb  01 autoencoding.ipynb  02 NCE modeling.ipynb  03 extract hubert encodings.ipynb  04 estimate encoder.ipynb  05 evaluate encoders.ipynb  06 introspect encodings.ipynb  20231113 evaluate decoder from export.ipynb  20231113 evaluate decoder.ipynb  20231114 word rnn.ipynb  20231119 dual head.ipynb  20231121 acoustic-phonetic.ipynb  20231121 eval acoustic-phonetic.ipynb  20231122 segmentation internals.ipynb  20231124 taps.ipynb  20240108 integrators.ipynb  20240116 timit explo.ipynb  20240129 acoustic-phonetic.ipynb  20240129 cohort size.ipynb  20240129 phoneme state space by position.ipynb  20240129 rep divergence.ipynb  20240129 state space.ipynb  20240129 trf.ipynb  20240129 word state space.ipynb  20240202 sanity check lengths.ipynb  20240206 random weights.ipynb  20240212 syllabify.ipynb  20240213 syllable state space.ipynb  20240220 ecog strf.ipynb  20240306 timit annotation check.ipynb  CLAUDE.md  Snakefile  config.yaml  estimate_encoder.py  pyproject.toml  rsa.py  to_profile.py  transformer model.ipynb
.superset/: launch.sh  setup.sh  shell.sh
.tools/mfa-env/: environment.yml  run
conf/: config.yaml
conf/autoencoder/: phone_random.yaml  phone_word_frequency.yaml  phone_word_uniform.yaml
conf/base_model/: w2v2-large_0.yaml  w2v2-large_11.yaml  w2v2-large_20.yaml  w2v2_0.yaml  w2v2_1.yaml  w2v2_10.yaml  w2v2_11.yaml  w2v2_2.yaml  w2v2_3.yaml  w2v2_4.yaml  w2v2_5.yaml  w2v2_6.yaml  w2v2_7.yaml  w2v2_8.yaml  w2v2_9.yaml  w2v2_pc_8.yaml  w2v2_pc_fr_8.yaml
conf/collator/: dual_phoneme.yaml  multilabel_phoneme.yaml
conf/dataset/: mls_french.yaml  timit_phonemes.yaml  timit_syllables.yaml
conf/equivalence/: biphone_pred.yaml  biphone_pred_10frames.yaml  biphone_recon.yaml  biphone_recon_10frames.yaml  next_phoneme.yaml  next_phoneme_10frames.yaml  phoneme.yaml  phoneme_10frames.yaml  phoneme_within_word_prefix.yaml  phoneme_within_word_prefix_10frames.yaml  phoneme_within_word_suffix.yaml  random.yaml  syllable.yaml  syllable_10frames.yaml  word.yaml  word_10frames.yaml  word_broad_10frames.yaml  word_prefix.yaml
conf/model/: discrim-ff_32.yaml  discrim-rnn_32-mAP1.yaml  discrim-rnn_32-mAP2.yaml  discrim-rnn_32-mAP3.yaml  discrim-rnn_32-pc-mAP1.yaml  discrim-rnn_32-pc-mAP2.yaml  discrim-rnn_32-pc-mAP3.yaml  discrim-rnn_32.yaml  discrim-rnn_8-mAP1.yaml  discrim-rnn_8-mAP2.yaml  discrim-rnn_8-mAP3.yaml  discrim-rnn_8-pc-phon_mAP1.yaml  discrim-rnn_8-pc-phon_mAP2.yaml  discrim-rnn_8-pc-phon_mAP3.yaml  discrim-rnn_8.yaml  ff_32.yaml  random_w2v2_6_32.yaml  random_w2v2_6_8.yaml  randomff_8.yaml  randomff_w2v2_6_32.yaml  randomff_w2v2_6_8.yaml  randomrnn_32.yaml  randomrnn_8.yaml  rnn_3-weightdecay0.01.yaml  rnn_3.yaml  rnn_32-aniso1.yaml  rnn_32-aniso2.yaml  rnn_32-aniso3.yaml  rnn_32-hinge-aniso1.yaml  rnn_32-hinge-aniso2.yaml  rnn_32-hinge-aniso3.yaml  rnn_32-hinge-mAP1.yaml  rnn_32-hinge-mAP2.yaml  rnn_32-hinge-mAP3.yaml  rnn_32-hinge-mAP4.yaml  rnn_32-hinge-mAP5.yaml  rnn_32-hinge.yaml  rnn_32-hinge_ph-mAP3.yaml  rnn_32.yaml  rnn_8-aniso1.yaml  (+42 more)
conf/recognition_model/: linear.yaml
conf/semantic_targets/: type_random.yaml
conf_encoder/: config.yaml
conf_encoder/analysis/: rsa_1.yaml
conf_encoder/corpus/: timit_spirit.yaml
conf_encoder/feature_sets/: aud.yaml  baseline.yaml  baseline_aud.yaml  biphone_pred-w2v2_8-l2norm.yaml  biphone_pred-w2v2_8.yaml  biphone_pred.yaml  biphone_recon-w2v2_8-l2norm.yaml  biphone_recon-w2v2_8.yaml  biphone_recon.yaml  ls-word_broad-aniso1-w2v2_8.yaml  ls-word_broad-aniso2-w2v2_8.yaml  ls-word_broad-aniso3-w2v2_8.yaml  ls-word_broad-hinge-w2v2_8-l2norm.yaml  ls-word_broad-hinge-w2v2_8.yaml  ls-word_broad_fixed-hinge-w2v2_8-l2norm.yaml  ls-word_broad_fixed-hinge-w2v2_8.yaml  next_phoneme-w2v2_8.yaml  next_phoneme.yaml  ph-ls-pc-phoneme_fixed-w2v2_pc_8-discrim1-l2norm.yaml  ph-ls-pc-phoneme_fixed-w2v2_pc_8-ffff-l2norm.yaml  ph-ls-pc-word_broad_fixed-w2v2_pc_8-discrim1-l2norm.yaml  ph-ls-pc-word_broad_fixed-w2v2_pc_8-ffff-l2norm.yaml  ph-ls-phoneme-w2v2_8-discrim1-l2norm.yaml  ph-ls-phoneme-w2v2_8-discrim2-l2norm.yaml  ph-ls-word_broad-hinge-w2v2_8-discrim1-l2norm.yaml  ph-ls-word_broad-hinge-w2v2_8-discrim2-l2norm.yaml  ph-ls-word_broad-hinge-w2v2_8-l2norm.yaml  ph-ls-word_broad-w2v2_8-discrim1-l2norm.yaml  ph-ls-word_broad-w2v2_8-discrim2-l2norm.yaml  ph-syllable-l2norm.yaml  (+32 more)
models/: __init__.py  autoencoder.py  frame_level.py  transformer.py
notebooks/: cohort size.ipynb  lexical_coherence.ipynb  lexical_coherence_for_aggregation.ipynb  line_search.ipynb  ngram_decoding.ipynb  pca.ipynb  phoneme_coherence.ipynb  phoneme_coherence_by_position.ipynb  phonetic_selectivity.ipynb  plot.ipynb  predictions.ipynb  predictions_word.ipynb  rsa_phoneme.ipynb  segmentation.ipynb  state_space.ipynb  syllable_boundary.ipynb  syllable_coherence.ipynb  syllable_coherence_align_phoneme.ipynb  syllable_coherence_by_position.ipynb  syllable_edit_distance.ipynb  temporal ROC RNN.ipynb  temporal ROC.ipynb  temporal_ROC.ipynb  temporal_generalization.ipynb  temporal_generalization_phoneme.ipynb  temporal_generalization_word.ipynb  trf.ipynb  visualize_predictions.ipynb  within_word_gradience.ipynb  word_boundary.ipynb  word_discrimination.ipynb  word_id.ipynb
notes/: analogy-french-design.md
scripts/: estimate_noise_ceiling_splithalf.py  extract_hidden_states.py  extract_model_embeddings.py  generate_state_space_specs.py  make_equivalence_dataset.py  tag_morphology_mls_french.py  test_extract_hidden_states_streaming.py  validate_extract_hidden_states.py
src/: analysis_rsa.py  estimate_encoder.py  train.py  word_recognition.py
summary_notebooks/: analogy pseudocausal broad.ipynb  analogy pseudocausal.ipynb  analogy v2.ipynb  analogy_pseudocausal_broad_pipeline.ipynb  cca.ipynb  coherence.ipynb  encoder_noise_ceiling.ipynb  geometry.ipynb  loss_curves.ipynb  predictions.ipynb  predictions_word.ipynb  recognition_points.ipynb  rsa_phoneme.ipynb  trf.ipynb  word_discrimination.ipynb
utils/: timit.py
(+76 files in other folders)
