[project]
name = "ideal-word-representations"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # HuggingFace
    "transformers",
    "datasets",

    # Training / model
    "torch",
    "hydra-core",
    "omegaconf",
    "ray[tune]",

    # Numerics / ML
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "polars",
    "pyarrow",
    "h5py",

    # Neural data
    "mne",
    "mat73",

    # Speech / audio
    "soundfile",
    "TextGrid",

    # NLP utilities
    "lemminflect",
    "IsoScore",

    # Workflow / pipelines
    "snakemake",
    "papermill",
    "dask",

    # Typing / validation
    "beartype",
    "jaxtyping",

    # Visualization
    "matplotlib",
    "seaborn",

    # Misc
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------

[tool.uv]
# Resolve all platforms we run on so the lockfile covers each. The aarch64
# Linux case is for transient sandboxes (e.g. Docker on Apple Silicon hosts);
# CUDA wheels aren't published for it, so we fall back to CPU torch there too.
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.sources]
# CPU torch on macOS and Linux/aarch64; CUDA 12.4 only on x86_64 Linux (prod).
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { index = "pytorch-cuda124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
