[project]
name = "ideal-word-representations"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # HuggingFace
    "transformers",
    "datasets",
    # Training / model
    "torch",
    "accelerate",
    "hydra-core",
    "omegaconf",
    "ray[tune]",
    # Numerics / ML
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "polars",
    "pyarrow",
    "h5py",
    # Neural data
    "mne",
    "mat73",
    # Speech / audio
    "soundfile",
    "TextGrid",
    # NLP utilities
    "lemminflect",
    "IsoScore",
    # Workflow / pipelines
    "snakemake",
    "papermill",
    "dask",
    # Typing / validation
    "beartype",
    "jaxtyping",
    # Visualization
    "matplotlib",
    "seaborn",
    # Misc
    "tqdm",
    "pyyaml",
    "snakemake-storage-plugin-http>=0.3.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "hydra-colorlog>=1.2.0",
    "spacy>=3.8.14",
    "fr-core-news-md",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------

[tool.uv]
# Resolve all platforms we run on so the lockfile covers each. The aarch64
# Linux case is for transient sandboxes (e.g. Docker on Apple Silicon hosts);
# CUDA wheels aren't published for it, so we fall back to CPU torch there too.
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.sources]
# macOS: default PyPI (arm64 wheels only exist there, not on pytorch-cpu index)
# Linux/aarch64: pytorch-cpu index (PyPI arm64 Linux wheels are CUDA-only)
# Linux/x86_64 prod: CUDA 12.4
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { index = "pytorch-cuda124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
fr-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.8.0/fr_core_news_md-3.8.0-py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
